unpackaged/main/default/objects/Communication__c/Communication__c.object-meta.xml
<CustomObject>
    <description>This object exists as a detail record to the Member object, to track the different types of communications that are sent to a member.</description>
    <label>Communication</label>
    <nameField>
        <displayFormat>COMM-{000000}</displayFormat>
        <label>Communication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>