unpackaged/main/default/objects/Communication__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Communications</relationshipLabel>
    <relationshipName>Communications</relationshipName>
    <type>Lookup</type>
</CustomField>