unpackaged/main/default/objects/Communication__c/fields/Communication_Type__c.field-meta.xml
<CustomField>
    <fullName>Communication_Type__c</fullName>
    <label>Communication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Welcome Letter</fullName>
            </value>
            <value>
                <fullName>Final Notice Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>