unpackaged/main/default/objects/Communication__c/fields/Disable_Letter_Button__c.field-meta.xml
<CustomField>
    <fullName>Disable_Letter_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Letter Button</label>
    <type>Checkbox</type>
</CustomField>