unpackaged/main/default/objects/Communication__c/fields/Letter_ID__c.field-meta.xml
<CustomField>
    <fullName>Letter_ID__c</fullName>
    <label>Letter ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>