unpackaged/main/default/objects/Communication__c/fields/LOB_Version_ID__c.field-meta.xml
<CustomField>
    <fullName>LOB_Version_ID__c</fullName>
    <label>LOB Version ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>