unpackaged/main/default/objects/Communication__c/fields/Processed_for_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Processed_for_Delivery_Date__c</fullName>
    <label>Processed for Delivery Date</label>
    <type>Date</type>
</CustomField>