unpackaged/main/default/objects/Communication__c/fields/Return_to_Sender__c.field-meta.xml
<CustomField>
    <fullName>Return_to_Sender__c</fullName>
    <label>Return to Sender</label>
    <type>Date</type>
</CustomField>