unpackaged/main/default/objects/Communication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Contact__c</columns>
    <columns>Letter_ID__c</columns>
    <columns>Template_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Communication_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>